--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Montserrat;
-	src: url(fonts/montserrat.ttf) format("truetype");
+	src: url(montserrat.ttf) format("truetype");
 }
 
 body {
